$Id$

v0.39.5		24-Dec-2003

	general:
		Added code for new binkp development, the code is disabled by
		default and can only be used with the right configure option.
		Upgraded to new released ftscprod.008

	common.a:
		Allows node locking with zero bytes lockfiles created by some
		other OS when enabled in the setup.
		The attach function now checks if a file is already attached.

	mbcico:
		Binkp code cleanup.
		Allow m_file command in binkp during file transfer in progress.
		Fixed a segfault when a session failed.
		New binkp driver, not compiled by default yet.
	
	mbout:
		Poll, remove poll and request failed to points which had no
		point directory in the outbound, now the directory is created.

	mbfido:
		With scannews after a GROUP command when authorisation was
		asked we did not perform a login.

	mbsetup:
		Added setting in menu 1.14 to allow zero bytes lockfiles
		created by another OS.

	script:
		Fixed NetBSD init script
		All init scripts now clean the ~/var/run directory and start
		the bbs allways so that the bbs will try to start after a power
		failure.


v0.39.4		08-Dec-2003 - 24-Dec-2003

	general:
		Added French language file created by Francois Thunus. This
		translation is not yet complete.
		Cleanup in main makefile, added help.
		Revised configure and all Makefiles for better support of
		linking with threads libraries.
		Changed endian tests using the configure script.
		Changed compiler flags for threads.

	upgrade:
		If you didn't change anything of the language defaults then
		delete /opt/mbse/etc/language.data and run mbsetup to create
		a new language.data including the french setup.

	libmsgbase:
		Changed the fix in JAM to prevent the copy overwrite. This may
		also fixed the message renumbering bug introduced with previous
		version.

	mbsebbs:
		A lot of small fixes for problems found with valgrind.

	mbsetup:
		Added default record for french language.

	mbtask:
		Moved the scheduler in a thread.