@@ -24,6 +24,7 @@
 /* protocol version */
 #define	PRTCLNAME "binkp"
 #define PRTCLVER "1.1"
+#define PRTCLOLD "1.0"
 
 #define MAX_BLKSIZE 0x7fff	/* Don't change!				*/
 #define	BLK_HDR_SIZE 2		/* 2 bytes header				*/
